--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 #
 #
 # Site title
-title: "Hyde"
+title: "Joijoide"
 #
 
 # A description of your site
@@ -19,8 +19,8 @@ description: "Hyde is a bold theme for the Jekyll blogging platform. Available f
 
 # The subpath of your site
 # Leave baseurl blank when you run it in local
-baseurl:
-# baseurl: https://beingeorge.com/hyde
+baseurl: https://joijoide.github.io
+# baseurl: https://joijoide.github.io
 
 # In this theme static CSS is not used. 
 sass:
